Aided refactors